@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-30T08:15:14Z",
+  "timestamp" : "2022-10-02T08:07:33Z",
   "count_outdated" : 80,
   "uniques_outdated" : 67,
-  "count" : 87,
-  "uniques" : 74,
+  "count" : 88,
+  "uniques" : 75,
   "clones" : [
     {
       "timestamp": "2022-09-19T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
